--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   }
 </style>
 <body>
-  <h1>Deena Ramkaran</h1>
+  <h1>Deena Ramkaran's Profile</h1>
 <img src="IMG_9571.png" height=150px>
 <style>
   h2 {
@@ -24,5 +24,17 @@
 <ul>
 <li> I am a complete foodie.</li>
 <li>I enjoy binge watching shows.</li>
+<h2>Other Profiles</h2>
+<ul>
+  <li><a href="https://facebook.com">Facebook</a></li>
+  <li><a href="https://plus.google.com/u/0/101009041964454501443">Google+</a></li>
+</ul>
+
+<h2>My Favorite Movies</h2>
+<ol>
+  <li>Finding Dory</li>
+  <li>The Dark Knight Rises</li>
+  <li>Divergent</li>
+</ol>
 </body>
 </html>
